tests/compile-fail/integration_suite__integration__anm_features__image_source_in_msg.snap
---
source: tests/integration/anm_features.rs
expression: stderr
---
error: unexpected image_source
   ┌─ <input>:11:30
   │
11 │         #pragma image_source "tests/integration/resources/th12-embedded-image-source.anm"
   │                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ image_source not valid in this format


